--- a/public/a4/twitter/explore/explore.css
+++ b/public/a4/twitter/explore/explore.css
@@ -147,7 +147,7 @@ body {
     font-size: 13px;
 }
 
-.wd-img-circle {
+.wd-follow-img {
     width: 48px;
     height: 48px;
     border-radius: 50%;
