--- a/public/a4/challenge/bootstrap/explore/explore.css
+++ b/public/a4/challenge/bootstrap/explore/explore.css
@@ -106,7 +106,7 @@ body {
     border-radius: 24px;
 }
 
-.wd-img-circle {
+.wd-follow-img {
     width: 48px;
     height: 48px;
     border-radius: 50%;
@@ -167,7 +167,7 @@ body {
     z-index: 2;
 }
 
-.wd-list-item{
+.wd-tweets-list-item{
     background-color: black;
     padding-top: 12px;
     padding-bottom: 12px;
