--- a/src/css/index.css
+++ b/src/css/index.css
@@ -257,3 +257,9 @@ body {
 .wd-padding-left-12 {
     padding-left: 12px;
 }
+
+.wd-border-bottom {
+    border-color: rgb(47, 51, 54);
+    border-style: solid;
+    border-width: 0 0 1px 0;
+}
