--- a/src/css/index.css
+++ b/src/css/index.css
@@ -39,11 +39,10 @@ body {
 }
 
 .wd-tweet-btn2 {
+    float: right;
     background-color: rgb(29, 155, 240);
     color: white;
     font-weight: bold;
-    padding-top: 12px;
-    padding-bottom: 12px;
     font-size: 15px;
 }
 
@@ -271,4 +270,26 @@ body {
     border-color: rgb(47, 51, 54);
     border-style: solid;
     border-width: 0 0 1px 0;
+}
+
+.wd-whatsHappeningImg{
+    padding-left: 100px;
+}
+
+.wd-whatsHappeningTextArea{
+    width: 100%;
+    resize: none;
+    background-color: inherit;
+    color: rgb(217, 217, 217);
+    border-width: 0 0 1px 0;
+    border-bottom: 1px solid rgb(47, 51, 54);
+}
+
+.wd-red {
+    color: red;
+
+}
+
+.wd-pointer {
+    cursor: pointer;
 }
