--- a/src/css/index.css
+++ b/src/css/index.css
@@ -293,3 +293,35 @@ body {
 .wd-pointer {
     cursor: pointer;
 }
+
+.wd-profile-imgBack {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    padding: 0;
+    margin:0;
+}
+
+.wd-profile-imgFront {
+    width: 150px;
+    height: 150px;
+    border-radius: 75px;
+    border: 5px solid black;
+    background-color: white;
+}
+
+.wd-relative {
+    position: relative;
+}
+
+.wd-profile-inner-img {
+    padding: 12px;
+    position: absolute;
+    bottom: -83px;
+    left: 18px;
+}
+
+.wd-profile-name {
+    font-size: 20px;
+    font-weight: 800;
+}
