--- a/src/css/index.css
+++ b/src/css/index.css
@@ -333,8 +333,18 @@ body {
     border: none;
 }
 
+.wd-editProfileBio{
+    width: 100%;
+    min-height: 72px;
+    background-color: inherit;
+    color: rgb(217, 217, 217);
+    border: none;
+    resize: none;
+}
+
 .wd-editProfileDate {
     color: rgb(217, 217, 217);
+    background-color: rgb(47, 51, 54);
     border: none;
 }
 
@@ -347,3 +357,8 @@ body {
     padding: 6px;
     border: 1px solid rgb(47, 51, 54);
 }
+
+.wd-fontSize-20 {
+    font-size: 20px;
+}
+
